--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@ function appTemplate() {
 					Some title {{item}}
 					<span class="accordion__pin"
 						ng-class="{'accordion__pin--active': chord.pinned}"
-						ng-click="chord.togglePin($event)"></span>
+						ng-click="chord.togglePin($event)">
+					</span>
 				</chordy-title>
 				Some content {{item}}
 			</chordy-chord>
