Use compiled code in example

--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 <head>
 	<title>Chordy</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.3/angular.js"></script>
-	<script src="src/chordy.mdl.js"></script>
-	<script src="src/chordy-set.cmt.js"></script>
-	<script src="src/chordy-chord.cmt.js"></script>
-	<script src="src/chordy-title.cmt.js"></script>
+	<script src="dist/angular-chordy.js"></script>
 	<style>
 
 .accordion {
