Use source code in demo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
 	<title>Chordy</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.3/angular.js"></script>
-	<script src="dist/angular-chordy.js"></script>
+	<script src="src/chordy.mdl.js"></script>
+	<script src="src/chordy-set.cmt.js"></script>
+	<script src="src/chordy-chord.cmt.js"></script>
+	<script src="src/chordy-title.cmt.js"></script>
 	<style>
 
 .accordion {
@@ -62,6 +65,7 @@
 <app></app>
 
 <script>
+
 angular.module('bootstrap', ['chordy'])
 	.directive('app', function () {
 		return {
